2010-12-20 Jens Thoms Toerring    <jt@toerring.de>

	* lib/part5_resources.texi: Wrong signature of
	fl_get_app_resources() as pointed out by LukenShiro
	corrected.

2010-12-18 Jens Thoms Toerring    <jt@toerring.de>

	* lib/include/tabfolder.h, doc/part3_container_objects.texi:
	Declaration of fl_get_tabfolder_offset() added and description
	of both fl_get_tabfolder_offset() and fl_set_tabfolder_offset()
	which as LukenShiro noted was missing./

	* doc/part5_useful_function.texi: Corrections to the
	descriptions of fl_iconify() and flwinresize() as
	proposed by LukeShiro.

2010-12-14 Jens Thoms Toerring    <jt@toerring.de>

	* lib/win.c, lib/flcolor.c, doc/part4_drawing_objects.texi:
	In some places there was a mix-up between FL_COLOR and
	'unsigned long' as LukenShiro pointed out. While this
	has no direct consequences it obscures the distinction
	between XForms colors and the colors the X server kows
	about.

2010-12-12 Jens Thoms Toerring    <jt@toerring.de>

	lib/version.c: fl_library_full_version() function
	added as sugested by LukenShiro.

2010-12-06 Jens Thoms Toerring    <jt@toerring.de>

	* lib/input.c: Bug removed that kept a multi-line
	input object to return (or invloe a callback) under
	the requested circumstances. Thanks to Eberhard
	Kuemmerle for pointing out the problem and submitting
	a patch.

	* lib/button.c: As Michal Szymanski pointed out the
	fl_set_button() function didn't work as described in
	the documentation for radio buttons (it did either
	lead to the button object getting returned to the
	program or an associated callback to be called).
	Hopefully fixed.

	* lib/xyplot.c: Marcus D. Leech reported problems
	with xyplot objects of type FL_ACTIVE_XYPLOT when
	using double buffering. For the time being (as a
	temporary fix) double buffering is disabled for
	such objects.

2010-10-28 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_printC.c: Changed the output format so that
	the resulting C files also compile with C++ compilers